comments et filter

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,8 @@
 				min-height: 100vh;
 			}
 		</style>
-
+		{{ encore_entry_script_tags('app') }}
+		{{ encore_entry_link_tags('app') }}
 		<title>
 			{% block title %}{% endblock %}
 		</title>
