--- a/templates/invoice/user_invoice.html.twig
+++ b/templates/invoice/user_invoice.html.twig
@@ -5,16 +5,31 @@
 
 {% block body %}
 	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
+		#commande {
+			margin-top: 150px;
 		}
 	</style>
+	<section id="commande">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Facture</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for invoice in invoices %}
+					{% if user.firstname == invoice.firstname %}
+						<tr>
+							<td>{{invoice.name}}</td>
+							<td>
+								<a class="btn btn-primary" href="{{ path('invoice_show',{'id':invoice.id}) }}">Voir</a>
+							</td>
+						</tr>
+					{% endif %}
+				{% endfor %}
+			</tbody>
 
+		</table>
+	</section>
 {% endblock %}
