--- a/templates/product/_filter.html.twig
+++ b/templates/product/_filter.html.twig
@@ -2,19 +2,18 @@
 	{{ form_start(form, {attr: {class: 'filter js-filter-form'}}) }}
 	{{ form_row(form.q) }}
 	<h4 style="font-weight:bold;font-size:1.5rem;" class="m-3">Catégories</h4>
-	{{ form_row(form.categories) }}
+	{{ form_row(form.category) }}
 
 	<h4>Prix</h4>
 	<div class="row">
 		<div class="col-md-6">
-			{{ form_row(form.min) }}
+			{{ form_row(form.min ) }}
 		</div>
 		<div class="col-md-6">
-			{{ form_row(form.max) }}
+			{{ form_row(form.max ) }}
 		</div>
 	</div>
-	<h4>Promotions</h4>
-	{{ form_row(form.promo) }}
+	<div id="price-slider"></div>
 	<button type="submit" class="btn btn-primary w-100">Filtrer</button>
 
 	{{ form_end(form) }}
