--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,27 +7,40 @@
 	<style>
 		body {
 			background-color: #03a9f4;
-			width: 100vh;
-			height: 100vh;
 		}
 		.filter_cc {
 			margin-top: 150px;
-			width: 100%;
-			height: 100%;
 			display: flex;
-			border: 2px solid black;
+			gap: 30px;
+		}
+		.paginationT {
+
+			border: 1px solid black;
+		}
+		@media(max-width:672px) {
+			.filter_cc {
+				flex-direction: column;
+			}
+			.table {
+				{
+					width: 40%;
+				}
+			}
 		}
 	</style>
+
 	<div class="container filter_cc ">
-
-		<div>
-			{% for product in products %}
-				{% include 'product/_cardTable.html.twig' with {product:product} only%}
-			{% endfor %}
-		</div>
-
 
 		{% include 'product/_filter.html.twig' with {form:form} only%}
 
+		<div class="row col-lg-8 tables">
+			{% for product in products %}
+				{% include 'product/_cardTable.html.twig' with {product:product} only%}
+			{% endfor %}
+
+		</div>
+
 	</div>
+
+
 {% endblock %}
