--- a/templates/product/_filter.html.twig
+++ b/templates/product/_filter.html.twig
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 	<div id="price-slider"></div>
-	<button type="submit" class="btn btn-primary w-100">Filtrer</button>
+	<button type="submit" class="btn btn-primary w-100 mt-5">Filtrer</button>
 
 	{{ form_end(form) }}
 </div>
