--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,8 +13,7 @@
 		<link
 		href="/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS   -->
-		<link rel="shortcut icon" href="{{ asset('upload/favicon.png') }}" type="image/x-icon">
-		<link rel="stylesheet" href="/css/product.css"> {% block stylesheets %}{% endblock %}
+		<link rel="shortcut icon" href="{{ asset('upload/favicon.png') }}" type="image/x-icon"> {% block stylesheets %}{% endblock %}
 		<style>
 			* {
 				margin: 0;
@@ -40,8 +39,7 @@
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-		<!-- Bootstrap CSS -->
-		<script src="/js/jquery-3.60.js"></script>
+
 		{% block javascripts %}{% endblock %}
 
 	</body>
