--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -67,7 +67,7 @@
 				<div class="row g-0">
 					<div class="collection-list mt-4 row gx-0 gy-3">
 						{% for categoryp in categoryps %}
-							{% include 'category_parent/show.html.twig' with {categoryp:categoryp} only%}
+							{% include 'category_parent/index.html.twig' %}
 						{% endfor %}
 					</div>
 				</div>
