--- a/templates/category_parent/index.html.twig
+++ b/templates/category_parent/index.html.twig
@@ -1,20 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello CategoryParentController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/gnahiet/Bureau/Techfortech/src/Controller/CategoryParentController.php'|file_link(0) }}">src/Controller/CategoryParentController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/gnahiet/Bureau/Techfortech/templates/category_parent/index.html.twig'|file_link(0) }}">templates/category_parent/index.html.twig</a></code></li>
-    </ul>
+<div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
+	<div class="collection-img position-relative">
+		<img src="/upload/images/products/LD0005869780_1.jpg" class="w-100">
+	</div>
+	<div class="text-center">
+		<p class="text-capitalize my-1">
+			<a href="{{ path('categoryp_show', {'id': categoryp.id}) }}">{{categoryp.name}}</a>
+		</p>
+	</div>
 </div>
-{% endblock %}
