--- a/templates/invoice/new.html.twig
+++ b/templates/invoice/new.html.twig
@@ -14,7 +14,7 @@
 			<div class="row g-0">
 
 				<div class="title text-center">
-					<h2 class="position-relative d-inline-block py-2">récapitulatif de la commande</h2>
+					<h2 class="position-relative d-inline-block py-2">récapitulatif du panier</h2>
 				</div>
 				<table class="table">
 					<thead>
@@ -44,7 +44,7 @@
 					</tfoot>
 				</table>
 				<div class="title text-center">
-					<h2 class="position-relative d-inline-block py-2">ADRESSE DE LIVRAISON</h2>
+					<h2 class="position-relative d-inline-block py-2">adresse de livraison</h2>
 				</div>
 
 				{{ form_start(form) }}
