--- a/templates/category_parent/index.html.twig
+++ b/templates/category_parent/index.html.twig
@@ -1,10 +1,10 @@
 <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
 	<div class="collection-img position-relative">
-		<img src="/upload/images/products/LD0005869780_1.jpg" class="w-100">
+		<img src="/upload/images/products/LD0005869780_1.jpg" class="w-90">
 	</div>
 	<div class="text-center">
 		<p class="text-capitalize my-1">
-			<a href="{{ path('categoryp_show', {'id': categoryp.id}) }}">{{categoryp.name}}</a>
+			<a href="{{ path('categoryp_show', {'name': categoryp.name}) }}">{{categoryp.name}}</a>
 		</p>
 	</div>
 </div>
