--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,75 +5,8 @@
 
 {% block body %}
 	<style>
-		body {
-
-			text-align: left;
-			background-color: #03a9f4;
-			font-size: 20px;
-		}
-		.main-body {
-			padding: 25px;
-		}
-		.card {
-			box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-		}
-
-		.card {
-
-			position: relative;
-			display: flex;
-			flex-direction: column;
-			min-width: 0;
-			word-wrap: break-word;
-			background-color: #fff;
-			background-clip: border-box;
-			border: 0 solid rgba(0, 0, 0, 0.125);
-			border-radius: 0.25rem;
-		}
-
-		.card-body {
-			flex: 1 1 auto;
-			min-height: 1px;
-			padding: 1rem;
-
-		}
-
-		.gutters-sm {
-			margin-right: -8px;
-			margin-left: -8px;
-		}
-
-		.gutters-sm > .col,
-		.gutters-sm > [class*=col-] {
-			padding-right: 8px;
-			padding-left: 8px;
-		}
-		.mb-3,
-		.my-3 {
-			margin-bottom: 1rem !important;
-		}
-
-
-		.h-100 {
-			height: 100% !important;
-		}
-		.shadow-none {
-			box-shadow: none !important;
-		}
-		h6 {
-			font-size: 15px;
-		}
-		.edit,
-		.deco {
-			font-size: 15px;
-
-			color: white;
-		}
 		#profil {
-			margin: 150px auto auto;
-
-			width: 100vh;
-			height: 100vh;
+			margin-top: 150px;
 		}
 	</style>
 
