--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -6,6 +6,12 @@
 		right: 0;
 		width: 350px;
 	}
+	.badge {
+		width: 30px;
+		height: 20px;
+		font-size: 8px;
+
+	}
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1 fixed-top">
@@ -49,19 +55,24 @@
 				{% endif %}
 				<li class="nav-item">
 					<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('cart_index') }}">
-						<i class="fa-solid fa-bag-shopping fa-3x" id="fa-bag"></i>
+						<i class="fa-solid fa-bag-shopping fa-3x position-relative" id="fa-bag">
+							{% if items | length  > 0 %}
+								<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger ">
+									{{items|length}}
+									<span class="visually-hidden">unread messages</span>
+								</span>
+							{% endif %}
+						</i>
 					</a>
 				</li>
-			</ul>
-		</div>
+			</li>
+		</ul>
 	</div>
-</nav>
-<div class="container message">
-	{% for classStyle,messages in app.flashes %}
-		{% for message in messages %}
-			<div class="alert alert-{{classStyle}}" role="alert">
-				<p class="mb-0">{{ message }}</p>
-			</div>
-		{% endfor %}
+</div></nav><div class="container message">
+{% for classStyle,messages in app.flashes %}
+	{% for message in messages %}
+		<div class="alert alert-{{classStyle}}" role="alert">
+			<p class="mb-0">{{ message }}</p>
+		</div>
 	{% endfor %}
-</div>
+{% endfor %}</div>
