--- a/templates/category_parent/index.html.twig
+++ b/templates/category_parent/index.html.twig
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
 	<div class="collection-img position-relative">
-		<img src="/upload/images/products/LD0005869780_1.jpg" class="w-90">
+		<img src="/upload/images/products/{{categoryp.file}}" class="w-80 ">
 	</div>
 	<div class="text-center">
 		<p class="text-capitalize my-1">
