--- a/templates/category_parent/index.html.twig
+++ b/templates/category_parent/index.html.twig
@@ -2,8 +2,8 @@
 	<div class="collection-img position-relative">
 		<img src="/upload/images/products/{{categoryp.file}}" class="w-80 ">
 	</div>
-	<div class="text-center">
-		<p class="text-capitalize my-1">
+	<div>
+		<p class="text-capitalize ">
 			<a href="{{ path('categoryp_show', {'name': categoryp.name}) }}">{{categoryp.name}}</a>
 		</p>
 	</div>
