--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -72,7 +72,7 @@
 						</div>
 
 						<h4>NOUVEAU CLIENT ?</h4>
-						<a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
+						<a class="btn btn-lg btn-primary" href="{{ path('app_regis') }}">Créez un compte</a>
 
 					</div>
 				</form>
