--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -22,23 +22,25 @@
 	<div class="container-fluid">
 		<div class="row text-white g-2">
 			<div class="col-md-10 col-lg-2">
-				<a class="text-uppercase text-decoration-none brand text-white" href="index.html">TechnforTechn</a>
-				<p class="text-white text-muted mt-3">Lorem ipsum dolor
+				<a class="text-uppercase text-decoration-none brand text-white" href="{{ path('home') }}">TechforAll</a>
+				<p class="text-white text-muted mt-3">la tech pour tous.
 				</p>
 			</div>
 
 			<div class="col-md-6 col-lg-3">
 				<ul class="list-unstyled">
 					<li class="my-3">
-						<a href="#" class="text-white text-decoration-none text-muted">
+						<a href="{{path('app_mention')}}" class="text-white text-decoration-none text-muted">
 							<i class="fas fa-chevron-right me-1"></i>
-							Home
+
+							Mentions Légales
+
 						</a>
 					</li>
 					<li class="my-3">
 						<a href="#" class="text-white text-decoration-none text-muted">
 							<i class="fas fa-chevron-right me-1"></i>
-							Collection
+							CCV
 						</a>
 					</li>
 				</ul>
@@ -50,7 +52,7 @@
 						<i class="fas fa-map-marked-alt"></i>
 					</span>
 					<span class="fw-light">
-						Albert Street, New York, AS 756, United States of America
+						14 rue de la tech ,75810 paris
 					</span>
 				</div>
 				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
@@ -76,22 +78,22 @@
 				<div>
 					<ul class="list-unstyled d-flex">
 						<li>
-							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+							<a href="https://www.facebook.com/" class="text-white text-decoration-none text-muted fs-4 me-4">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+							<a href="https://www.twitter.com/" class="text-white text-decoration-none text-muted fs-4 me-4">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+							<a href="https://www.instagram.com/" class="text-white text-decoration-none text-muted fs-4 me-4">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+							<a href="https://www.pinterest.com/" class="text-white text-decoration-none text-muted fs-4 me-4">
 								<i class="fab fa-pinterest"></i>
 							</a>
 						</li>
