--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,8 +6,8 @@
 {% block body %}
 	<style>
 		body {
-			background-color: #03a9f4;
 			height: 100%;
+
 		}
 		.container_register_btn {
 			display: flex;
@@ -17,13 +17,14 @@
 
 		#register {
 			position: relative;
-			margin-top: 150px;
-			height: 100vh;
+			margin: 150px auto;
+			background-color: #03a9f4;
+			box-shadow: 10px 5px 5px #03a9f4;
+			height: 50%;
+			width: 50%;
 			display: flex;
 			gap: 2px;
 			flex-direction: column;
-
-
 		}
 
 		@media(max-width: 990px) {
