--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 		<link
 		href="/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS   -->
-		<link rel="shortcut icon" href="{{ asset('upload/favicon.png') }}" type="image/x-icon"> {% block stylesheets %}{% endblock %}
+		<link rel="shortcut icon" href="{{ asset('upload/logo1.svg') }}" type="image/x-icon"> {% block stylesheets %}{% endblock %}
 		<style>
 			* {
 				margin: 0;
