--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1 fixed-top">
 	<div class="container-fluid">
-		<a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="{{ path("home")}}"><img src="/upload/logo.png" alt="" style="width: 100px; height:100px"></a>
+		<a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="{{ path("home")}}"><img src="/upload/logo1.svg" alt="" style="width: 100px; height:100px"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -27,6 +27,11 @@
 					<a class="nav-link active btn btn-lg my-2 " href="{{ path('home') }}">Accueil
 					</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link active btn btn-lg my-2 " href="{{ path('contact') }}">Contact
+					</a>
+				</li>
+
 				{% if is_granted("ROLE_USER") == true %}
 					<li class="nav-item">
 						<a class="nav-link btn btn-lg btn-info mt-2" href="{{ path('app_user') }}">Profil</a>
