--- a/templates/category_parent/show.html.twig
+++ b/templates/category_parent/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category index
+{% block title %}
+	{{categoryps.name}}
 {% endblock %}
 
 {% block body %}
