--- a/templates/mention/index.html.twig
+++ b/templates/mention/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MentionController!
+{% block title %}MENTIONS LEGALES
 {% endblock %}
 
 {% block body %}
@@ -16,7 +16,7 @@
 			<p style="text-align:center">MENTIONS LEGALES :</p>
 
 			<p style="text-align:justify">Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N.
-																												, nous portons à la connaissance des utilisateurs et visiteurs du site :
+																																				, nous portons à la connaissance des utilisateurs et visiteurs du site :
 				<a href="http://www.techfortech.prez.ovh" target="_blank">www.techfortech.prez.ovh</a>
 				les informations suivantes :</p>
 
