--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -38,9 +38,15 @@
 						</a>
 					</li>
 					<li class="my-3">
-						<a href="#" class="text-white text-decoration-none text-muted">
+						<a href="{{path('app_cgv')}}" class="text-white text-decoration-none text-muted">
 							<i class="fas fa-chevron-right me-1"></i>
-							CCV
+							CGV
+						</a>
+					</li>
+					<li class="my-3">
+						<a href="{{path('app_polity')}}" class="text-white text-decoration-none text-muted">
+							<i class="fas fa-chevron-right me-1"></i>
+							Politique de Confidentialité
 						</a>
 					</li>
 				</ul>
