--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CartController!
+{% block title %}Mon panier
 {% endblock %}
 
 {% block body %}
