--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!
+{% block title %}Nous contacter
 {% endblock %}
 
 {% block body %}
