--- a/templates/user/editprofile.html.twig
+++ b/templates/user/editprofile.html.twig
@@ -23,7 +23,7 @@
 									<h4>{{app.user.lastname}}
 										{{app.user.firstname}}</h4>
 									<br>
-									<a class="nav-link btn btn-md btn-primary  deco" href="{{ path('app_logout') }}">Mes commandes</a>
+									{# <a class="nav-link btn btn-md btn-primary  deco" href="{{ path('app_logout') }}">Mes commandes</a> #}
 									<br>
 									<a class="nav-link btn btn-lg btn-danger mt-2 deco" href="{{ path('app_logout') }}">Déconnexion</a>
 								</div>
