--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -16,6 +16,18 @@
 			background-color: red;
 		}
 	}
+	.banniere{
+		border : solid 2px white;
+		background-color: white;
+		color : black;
+		position: fixed;
+		bottom: 0;
+		right: 0;
+		width: 20%;
+		height: 25%;
+	}
+
+
 </style>
 
 <footer class="bg-dark py-1">
