--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,9 @@
+		{% include 'Partial/cookie2.php' %}
+
 <!doctype html>
 <html lang="en">
 	<head>
+	
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta
@@ -37,8 +40,10 @@
 		{% include 'Partial/_navBar.twig' %}
 		{% block body %}{% endblock %}
 		{% include 'Partial/_footerBar.twig' %}
+		{% include 'Partial/cookie.php' %}
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<script src="app.js"></script>
 		{% block javascripts %}{% endblock %}
 
 
