--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -16,17 +16,76 @@
 			background-color: red;
 		}
 	}
-	.banniere{
-		border : solid 2px white;
-		background-color: white;
-		color : black;
-		position: fixed;
-		bottom: 0;
-		right: 0;
-		width: 20%;
-		height: 25%;
-	}
 
+	@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+ position: fixed;
+  bottom: 0;
+  right: 0;
+  max-width: 380px;
+  background: #fff;
+  padding: 25px 25px 30px 25px;
+  border-radius: 15px;
+  box-shadow: 1px 7px 14px -5px rgba(0, 0, 0, 0.15);
+  text-align: center;
+}
+.wrapper.hide {
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.8);
+  transition: all 0.3s ease;
+}
+::selection {
+  color: #fff;
+  background: #fcba7f;
+}
+.wrapper img {
+  max-width: 90px;
+}
+.content header {
+  font-size: 25px;
+  font-weight: 600;
+}
+.content {
+  margin-top: 10px;
+}
+.content p {
+  color: blue;
+  margin: 5px 0 20px 0;
+}
+.content .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.buttons button {
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 5px;
+  background: #212529;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.buttons button:hover {
+  transform: scale(0.97);
+}
+.buttons .item {
+  margin: 0 10px;
+}
+.buttons a {
+  color: blue;
+}
 
 </style>
 
@@ -121,3 +180,14 @@
 		</div>
 	</div>
 </footer>
+	<div class="wrapper">
+	<img src="/upload/cookie.jpg" alt="" style="width: 100px; height:100px">
+    <div class="content">
+      <header>Consentement aux cookies</header>
+      <p>Nous utilisons des cookies afin d’améliorer l'expérience de nos utilisateurs sur le site, en acceptant, vous nous autorisez à installer des cookies sur votre périphérique.</p>
+      <div class="buttons">
+        <button class="item">J'accepte</button>
+        <a  href="{{path('app_mention')}}" class="item">Voir plus</a>
+      </div>
+    </div>
+  </div>
