--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,8 +43,10 @@
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="app.js"></script>
+		<script src="https://unpkg.com/scrollreveal"></script>
 		{% block javascripts %}{% endblock %}
 <script>
+ const sr = ScrollReveal();
     const cookieBox = document.querySelector(".wrapper"),
     acceptBtn = cookieBox.querySelector("button");
     acceptBtn.onclick = ()=>{
@@ -58,9 +60,8 @@
     }
     let checkCookie = document.cookie.indexOf("CookieRgpd=true");
     checkCookie != -1 ? cookieBox.classList.add("hide") : cookieBox.classList.remove("hide");
+   sr.reveal(".card");
 
-	const sr = ScrollReveal();
-sr.reveal(".card");
   </script>
 
 	</body>
