--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,10 @@
 		<script src="https://unpkg.com/scrollreveal"></script>
 		{% block javascripts %}{% endblock %}
 <script>
- const sr = ScrollReveal();
+ const sr = ScrollReveal({
+	reset : true,
+	duration: 2000
+ });
     const cookieBox = document.querySelector(".wrapper"),
     acceptBtn = cookieBox.querySelector("button");
     acceptBtn.onclick = ()=>{
@@ -60,8 +63,10 @@
     }
     let checkCookie = document.cookie.indexOf("CookieRgpd=true");
     checkCookie != -1 ? cookieBox.classList.add("hide") : cookieBox.classList.remove("hide");
-   sr.reveal(".card");
 
+ sr.reveal(".card",{
+	delay: 1000
+ }300);
   </script>
 
 	</body>
