--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,10 +46,7 @@
 		<script src="https://unpkg.com/scrollreveal"></script>
 		{% block javascripts %}{% endblock %}
 <script>
- const sr = ScrollReveal({
-	reset : true,
-	duration: 2000
- });
+ const sr = ScrollReveal();
     const cookieBox = document.querySelector(".wrapper"),
     acceptBtn = cookieBox.querySelector("button");
     acceptBtn.onclick = ()=>{
@@ -65,7 +62,9 @@
     checkCookie != -1 ? cookieBox.classList.add("hide") : cookieBox.classList.remove("hide");
 
  sr.reveal(".card",{
-	delay: 1000
+	delay: 1000,
+	reset : true,
+	duration: 2000
  }500);
   </script>
 
